Slight color changes

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,11 +13,11 @@ body {
 }
 
 .card-emp1 {
-  background-color: #116B6B;
+  background-color: #22a7a7;
 }
 
 .card-emp2 {
-  background-color: #116B6B; 
+  background-color: #22a7a7; 
 }
 
 
